--- a/SAIDL_Assignment_CORE_ML.ipynb
+++ b/SAIDL_Assignment_CORE_ML.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN6BKA08I8vKYQNJDL9dCYM",
+      "authorship_tag": "ABX9TyNGayTSN1eDLD5Go+XiaXvI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Load and preprocess CIFAR-100 dataset\n",
+        "# Load CIFAR-100 dataset\n",
         "(train_images, train_labels), (test_images, test_labels) = datasets.cifar100.load_data()\n",
         "train_images, test_images = train_images / 255.0, test_images / 255.0\n",
         "train_labels, test_labels = to_categorical(train_labels), to_categorical(test_labels)\n"
@@ -81,6 +81,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Standard Softmax"
+      ],
+      "metadata": {
+        "id": "0W7RiS1x31MF"
+      }
     },
     {
       "cell_type": "code",
@@ -431,6 +440,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Gumbell Softmax"
+      ],
+      "metadata": {
+        "id": "jEeu9LRH3xza"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "tfd = tfp.distributions\n",
@@ -759,6 +777,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Bonus Task"
+      ],
+      "metadata": {
+        "id": "ONnOIIzp3rly"
+      }
     },
     {
       "cell_type": "code",
